[package]
name = "doorman"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "doorman"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
solana-program = "1.7.11"
anchor-lang = "0.18.0"
anchor-spl = "0.18.0"
spl-token = { version = "3.1.1", features = ["no-entrypoint"] }
nft-candy-machine = { path = "../nft-candy-machine", features = ["cpi"]}
